<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <include
        android:id="@id/headerStudent"
        layout="@layout/header_student"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:paddingHorizontal="12dp"
        android:elevation="4dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <include
        android:id="@+id/footerStudent"
        layout="@layout/footer_student"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="22dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerStudent"
        app:layout_constraintBottom_toTopOf="@id/footerStudent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_text"
                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/nunito_extra_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_extra_bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvBack"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/userInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/bg_card_outline"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imAvatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="Avatar"
                    android:background="@android:color/darker_gray"
                    android:layout_marginEnd="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="@font/nunito_extra_bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvUserRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_student_role"
                        android:textSize="14sp"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userDetailsBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_card_outline"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/userInfoLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/onlineUsersBlock">

                <TextView
                    android:id="@+id/tvUserDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_user_details"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email_address"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_value"
                    android:textColor="#0277BD"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_visibility"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_country"
                        android:textSize="13sp"
                        android:textStyle="bold" /> <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_value"
                    android:textSize="13sp"
                    android:layout_marginStart="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_city_town"
                        android:textSize="13sp"
                        android:textStyle="bold" /> <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_town_value"
                    android:textSize="13sp"
                    android:layout_marginStart="4dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/onlineUsersBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_card_outline"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/userInfoLayout"
                app:layout_constraintStart_toEndOf="@id/userDetailsBlock"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_online_users"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="32dp" />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/online_user_1" android:textSize="13sp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/online_user_2" android:textSize="13sp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/online_user_3" android:textSize="13sp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/online_user_4" android:textSize="13sp"/>
            </LinearLayout>

            <Button

                android:id="@+id/btnMessage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_message_button"
                android:fontFamily="@font/nunito_extra_bold"
                android:paddingHorizontal="12dp"
                android:text="@string/button_message"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userDetailsBlock"
                app:layout_constraintTop_toBottomOf="@id/userInfoLayout"
                tools:ignore="SmallSp,TouchTargetSizeCheck" />


            <LinearLayout
                android:id="@+id/courseDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_card_outline"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/userDetailsBlock"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_courses_details"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_1_name"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_2_name"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_card_outline"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/courseDetails"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_login_activity"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="4dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_access_site_label"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_access_site_value"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>