<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="259dp"
        android:layout_height="288dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/tvSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:text="@string/EngGo"
        android:textColor="#0097A7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/nunito_extra_bold"
        android:hint="Username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,HardcodedText,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/nunito_extra_bold"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:paddingLeft="30dp"
        android:paddingTop="3dp"
        android:paddingRight="30dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/fg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:text="@string/fg"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/fg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="────────"
            android:textColor="#A9A9A9"
            android:textSize="14sp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" or "
            android:fontFamily="@font/nunito_extra_bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="────────"
            android:textColor="#A9A9A9"
            android:textSize="14sp"
            tools:ignore="HardcodedText,TextContrastCheck" />
    </LinearLayout>
    <TextView
        android:id="@+id/loginb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginb"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:fontFamily="@font/nunito_extra_bold"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebook"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_facebook"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/fb"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginb" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_gg"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/gm"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>


