<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/tvSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:text="@string/EngGo"
        android:textColor="#0097A7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text_form"
        android:fontFamily="@font/nunito_extra_bold"
        android:hint="Username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/text_secondary"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        app:layout_constraintWidth_percent="0.8"
        android:textCursorDrawable="@drawable/cursor_color"
        tools:ignore="Autofill,HardcodedText,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text_form"
        android:fontFamily="@font/nunito_extra_bold"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/text_secondary"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:paddingLeft="30dp"
        android:paddingTop="3dp"
        android:paddingRight="30dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:text="@string/fg"
        android:textColor="@color/text_primary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="────────"
            android:textColor="@color/divider_color"
            android:textSize="14sp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extra_bold"
            android:text=" o "
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            tools:ignore="HardcodedText,TextContrastCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="────────"
            android:textColor="@color/divider_color"
            android:textSize="14sp"
            tools:ignore="HardcodedText,TextContrastCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


